chore(core): rename package

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "vuetable-2",
-  "version": "1.7.6",
+  "name": "@emonitorag/vuetable-2",
+  "version": "1.7.7",
   "description": "Datatable component for Vue 2.x",
   "main": "dist/vuetable-2.js",
   "license": "MIT",
   "author": "Rati Wannapanop <rati.wannapanop@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ratiw/vuetable-2.git"
+    "url": "git@github.com:emonitor-ch/vuetable-2.git"
   },
   "private": false,
   "keywords": [
@@ -120,5 +120,13 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "bugs": {
+    "url": "https://github.com/ratiw/vuetable-2/issues"
+  },
+  "homepage": "https://github.com/ratiw/vuetable-2#readme",
+  "directories": {
+    "doc": "docs",
+    "test": "test"
+  }
 }
